* ext/socket/ancdata.c (bsock_sendmsg_internal): all arguments are   parsed even on systems without HAVE_STRUCT_MSGHDR_MSG_CONTROL   to prevent SEGV caused by passing Qnil to RARRAY_LENINT and   to preserve behavior before r50776.   [Bug #11224] [ruby-core:69468] [Bug #11225] [ruby-core:69469]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@50784 b2dd03c8-39d4-4d8f-98ff-823fe69b080e